Haiku: sync with upstream changes.